--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
 
 <body>
     <form id="form">
-        <label for="rope-lengths">Enter rope lengths:</label>
-        <input type="text" id="rope-lengths">
+        <label for="ropeLengths">Enter rope lengths:</label>
+        <input type="text" id="ropeLengths">
         <button type="button" onclick="calculateMinCost()">Calculate</button>
       </form>
       <div id="result"></div>
